# OS

./: README.md
CheckPrimeNumbersUsingThreads/: CheckPrimeNumbersUsingThreads.sln
CheckPrimeNumbersUsingThreads/CheckPrimeNumbersUsingThreads/: CheckPrimeNumbersUsingThreads.vcxproj  main.cpp
CheckPrimeNumbersUsingThreads/CheckPrimeNumbersUsingThreads/x64/Debug/: CheckPrimeNumbersUsingThreads.exe.recipe  CheckPrimeNumbersUsingThreads.ilk  vc143.idb
CheckPrimeNumbersUsingThreads/CheckPrimeNumbersUsingThreads/x64/Debug/CheckPri.cf8510b6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CheckPrimeNumbersUsingThreads.lastbuildstate  link.command.1.tlog  (+2 more)
FreeLockStack/: FreeLockStack.sln
FreeLockStack/FreeLockStack/: FreeLockStack.vcxproj  Source.cpp
MatrixMultiplicationUsingThreads/: MatrixMultiplicationUsingThreads.sln
MatrixMultiplicationUsingThreads/MatrixMultiplicationUsingThreads/: MatrixMultiplicationUsingThreads.vcxproj  main.cpp
MatrixMultiplicationUsingThreads/MatrixMultiplicationUsingThreads/x64/Debug/: MatrixMultiplicationUsingThreads.exe.recipe  MatrixMultiplicationUsingThreads.ilk  vc143.idb
ProducerAndConsumer/: ProducerAndConsumer.sln
ProducerAndConsumer/ProducerAndConsumer/: ProducerAndConsumer.vcxproj  Source.cpp
ProducerAndConsumer/ProducerAndConsumer/x64/Debug/: ProducerAndConsumer.exe.recipe  ProducerAndConsumer.ilk  vc143.idb
RWLock/: RWLock.sln
RWLock/RWLock/: RWLock.vcxproj  Source.cpp
Spinlock/: Spinlock.sln
Spinlock/Spinlock/: Source.cpp  Spinlock.vcxproj
WeatherHTTP/: CMakeLists.txt  Source.cpp  WeatherHTTP.vcxproj  WeatherHTTP.vcxproj.filters  page.html  report.json
WeatherHTTP/x64/Debug/: WeatherHTTP.exe.recipe  WeatherHTTP.ilk  WeatherHTTP.vcxproj.FileListAbsolute.txt  vc143.idb
WeatherHTTP/x64/Debug/WeatherHTTP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WeatherHTTP.lastbuildstate  WeatherHTTP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: CMakeLists.txt  main.cpp
cmake/solver/: Solver.cpp
cmake/stack/: CMakeLists.txt
cmake/stack/include/: ThreadSafeStack.h
cmake/stack/src/: ThreadSafeStack.cpp
(+14 files in other folders)
